# py-pack

./: LICENSE  MANIFEST.in  README.md  setup.cfg
ighoshsubho.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ighoshsubho/: README.md
