[metadata]
name = ighoshsubho
version = 0.0.2
author = Subho Ghosh
author_email = ighoshsubho@gmail.com
description = For knowing about me
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ighoshsubho/py-pack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True